--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,7 @@
-sdk.dir=C:\\Users\\Dell user\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\Dell user\\flutter
+sdk.dir=C:/Users/mariv/AppData/Local/Android/Sdk
+flutter.sdk=C:\\flutter
+flutter.buildMode=debug
+flutter.versionCode=1
+flutter.versionName=1.0.0
+flutter.flutterMinSdkVersion=24
+flutter.flutterTargetSdkVersion=31
