--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -29,3 +29,12 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+class FlutterExtension {
+    /** Sets the compileSdkVersion used by default in Flutter app projects. */
+    static int compileSdkVersion = 31
+
+    /** Sets the minSdkVersion used by default in Flutter app projects. */
+    static int minSdkVersion = 19
+
+    /** Sets the targetSdkVersion used by default in Flutter app projects. */
+    static int targetSdkVersion = 31}
