--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  permission_handler: ^11.0.1
+  flutter_contacts: ^1.1.7+1
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
