--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,5 +1,5 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\Dell user\flutter
+FLUTTER_ROOT=C:\src\flutter
 FLUTTER_APPLICATION_PATH=C:\Users\Dell user\StudioProjects\phonebook
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
