--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   permission_handler: ^11.0.1
   flutter_contacts: ^1.1.7+1
   cupertino_icons: ^1.0.2
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  min_sdk_android: 21
+
 
 dev_dependencies:
   flutter_test:
