--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_contacts: ^1.1.7+1
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.8
 
 
 flutter_launcher_icons:
@@ -54,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -97,3 +98,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/icon.png
+
+  android_12:
+    image: assets/icon.png
+    icon_background_color: "#ffffff"
+    branding: assets/text.png
+
+
