--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\va200\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\va200\\SDK\\flutter
+sdk.dir=C:\\Users\\Dell user\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
 flutter.versionCode=1
 flutter.versionName=1.0.0
